<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_list"
        android:icon="@drawable/list"
        android:title="@string/menu_item_reservation_list" />
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:title="@string/menu_item_home" />
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/setting"
        android:title="@string/menu_item_setting" />
</menu>
