...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_confirm"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_seats_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{reservationInfo.title}"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="해리 포터와 마법사의 돌" />

            <TextView
                android:id="@+id/tv_seats_total_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@{String.format(@string/reservation_select_total_price_format , money)}"
                android:textColor="@color/gray_72"
                android:textSize="18sp"
                tools:text="0원" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
...
