...
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:gravity="center"
            android:text="@{reservation.movieTitle}"
            android:textColor="@color/black"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_divider_2"
            app:layout_constraintTop_toTopOf="@id/tv_ticket_count"
            tools:text="강남" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@{reservation.totalPriceToString()}"
            android:textColor="@color/black"
...
