...
                android:id="@+id/textview_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                app:formattedAmount="@{ticket.amount}"
                tools:text="25,000원 (현장 결제)" />

        </LinearLayout>

    </LinearLayout>

</layout>
