...
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/seat_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:layout_marginBottom="20dp"
                    android:stretchColumns="*"
                    app:layout_constraintTop_toBottomOf="@id/screen_tv" />
...
